i cant even copy it right

--- a/ROOM.css
+++ b/ROOM.css
@@ -238,7 +238,7 @@
 [data-cid^="10607990-"] .msg .from .icon-chat-promoter + span, #user-lists .list.room .id-10607990 .icon-chat-promoter + span, #user-rollover.id-10607990 .info .role i.icon-chat-promoter + span, [data-cid^="10607990-"] .msg .from .icon-chat-manager + span, #user-lists .list.room .id-10607990 .icon-chat-manager + span, #user-rollover.id-10607990 .info .role i.icon-chat-manager + span {
     color: #7DFF7C !important;
 }
-#chat [data-cid^="10607990-"] span.un.clickable, 
+#chat [data-cid^="10607990-"] span.un.clickable,
 #user-lists .list.room .id-10607990 .name, #user-lists .list.room .is-staff.id-10607990 .name, #user-lists .list.room .is-dj.id-10607990 .name, #user-lists .list.room .is-subscriber.id-10607990 .name, #user-lists .list.room [class*='role'].id-10607990 .name, #chat .msg .text .id-10607990, #chat .msg .text .name.id-10607990, #chat .msg .text .name.id-10607990 .name, #user-rollover.id-10607990 .username, #user-rollover.id-10607990 .meta.subscriber .status span, #user-rollover.id-10607990.is-staff .info .role span {
     color: #7DFF7C !important;
 }
@@ -252,11 +252,14 @@
 }
 
 /* MysticJump */
+[data-cid^="28366137-"] .msg .from .icon-chat-promoter + span, #user-lists .list.room .id-28366137 .icon-chat-promoter + span, #user-rollover.id-28366137 .info .role i.icon-chat-promoter + span, [data-cid^="28366137-"] .msg .from .icon-chat-manager + span, #user-lists .list.room .id-28366137 .icon-chat-manager + span, #user-rollover.id-28366137 .info .role i.icon-chat-manager + span {
+    color: #e64c3b !important;
+}
+#chat [data-cid^="28366137-"] span.un.clickable,
+#user-lists .list.room .id-28366137 .name, #user-lists .list.room .is-staff.id-28366137 .name, #user-lists .list.room .is-dj.id-28366137 .name, #user-lists .list.room .is-subscriber.id-28366137 .name, #user-lists .list.room [class*='role'].id-28366137 .name, #chat .msg .text .id-28366137, #chat .msg .text .name.id-28366137, #chat .msg .text .name.id-28366137 .name, #user-rollover.id-28366137 .username, #user-rollover.id-28366137 .meta.subscriber .status span, #user-rollover.id-28366137.is-staff .info .role span {
+    color: #e64c3b !important;
+}
 [data-cid^="28366137-"] .msg .from .icon-chat-promoter, #user-lists .list.room .id-28366137 .icon-chat-promoter, #user-rollover.id-28366137 .info .role i.icon-chat-promoter {
     background: url("https://raw.githubusercontent.com/Gameplayer8850/Jak-mozna-nie-lubic-anime-/master/img/ranks/mystic_promotor.png") !important;
     background-repeat: no-repeat !important;
-}
-#chat [data-cid^="28366137-"] span.un.clickable, 
-#user-lists .list.room .id-28366137 .name, #user-lists .list.room .is-staff.id-28366137 .name, #user-lists .list.room .is-dj.id-28366137 .name, #user-lists .list.room .is-subscriber.id-28366137 .name, #user-lists .list.room [class*='role'].id-28366137 .name, #chat .msg .text .id-28366137, #chat .msg .text .name.id-28366137, #chat .msg .text .name.id-28366137 .name, #user-rollover.id-28366137 .username, #user-rollover.id-28366137 .meta.subscriber .status span, #user-rollover.id-28366137.is-staff .info .role span {
-    color: #e64c3b !important;
 }
